--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
     "mdbreact": "^4.25.4",
+    "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-bootstrap-date-picker": "^5.1.0",
@@ -15,7 +16,8 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "sfcookies": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
